# acrn-hypervisor

./: .checkpatch.conf  .clang-format  .deb.conf  .env  .gitignore  .pre-commit-intel  .travis.yml  0001-doc-update-documentation-and-grub-file.patch  CODEOWNERS  CODE_OF_CONDUCT.rst  CONTRIBUTING  CONTRIBUTING.rst  Defs.mk  Dockerfile  LICENSE  MAINTAINERS  Makefile  README  README.md  README.rst  README2.md  VERSION  acrn.doxyfile  conf.py  contribute.rst  docbuild.rst  docker-compose.yml  doxyfile  glossary.rst  index.rst  license_header  paths.make  release_notes.rst  stupid_ideas.txt
misc/config_tools/: MANIFEST.in  README  README.md  build.cmd  build.sh  pyproject.toml  requirements.txt  setup.cfg
misc/config_tools/acpi_gen/: __init__.py  acpi_const.py  asl_gen.py  bin_gen.py
misc/config_tools/board_config/: README  acpi_platform_h.py  board_c.py  board_cfg_gen.py  board_info_h.py  misc_cfg_h.py  pci_devices_h.py  vbar_base_h.py
misc/config_tools/board_inspector/: README  board_inspector.py  cli.py
misc/config_tools/config_app/: acrn_configurator.py  app.py  configs.py  controller.py  requirements  views.py
misc/config_tools/configurator/: .gitignore  README.md  __init__.py  index.html  package.json  requirements.txt  tsconfig.json  vite.config.js
misc/config_tools/data/: sample_launch_scripts
misc/config_tools/hv_config/: board_defconfig.py  hv_item.py
misc/config_tools/launch_config/: README  com.py  launch_cfg_gen.py  launch_item.py  launch_script_template.sh  pt.py
misc/config_tools/scenario_config/: README  __init__.py  config_summary.py  default_populator.py  elementpath_overlay.py  ivshmem_cfg_h.py  lxml_loader.py  pci_dev_c.py  pipeline.py  pt_intx_c.py  scenario_cfg_gen.py  scenario_item.py  scenario_transformer.py  schema_slicer.py  upgrader.py  validator.py  vm_configurations_c.py  vm_configurations_h.py  xml_loader.py
misc/config_tools/schema/: VMtypes.xsd  board.xsd  config.xsd  datachecks.xsd  scenario_structure.xsd  types.xsd
misc/config_tools/service_vm_config/: README  serial_config.py
misc/config_tools/static_allocators/: bdf.py  board_capability.py  clos.py  gpa.py  (+9 more)
(+3033 files in other folders)
