[metadata]
name = acrn-config-tools
version = 3.0
author = Intel
author_email = acrn-dev@lists.projectacrn.org
description = Supporting libraries of ACRN configuration toolset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/projectacrn/acrn-hypervisor
project_urls =
    Bug Tracker = https://github.com/projectacrn/acrn-hypervisor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-3-Clause License
    Operating System :: OS Independent
    Private :: Do Not Upload

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = .

[options.package_data]
schema        = *, */*, */*/*, */*/*/*, */*/*/*/*
launch_config = *, */*, */*/*, */*/*/*, */*/*/*/*
data          = *, */*, */*/*, */*/*/*, */*/*/*/*
configurator  = packages/configurator/build/assets/scenario.json
