[package]
name = "acrn-configurator"
version = "0.1.0"
description = "ACRN Configurator"
authors = ["Feng, Weiyi <weiyix.feng@intel.com>"]
license = "BSD"
repository = "https://github.com/projectacrn/acrn-hypervisor"
default-run = "acrn-configurator"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.6", features = ["api-all"] }
log = "0.4"
glob = "0.3"
dirs = "4.0"
itertools = "0.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
